# streamlit_portofolio

./: Main_Page.py  main.py  pyproject.toml
knowledge/: company.json  company.jsonl  cv_data.json  profile.py
pages/: 1_About_Me.py  2_Experience.py  3_Contact_Me.py  About_Me.py  experience.py  projects.py
